--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url("styles/header.css");
 :root {
     --cor-de-fundo: #EBECEE;
+}
+body{
+    background-color: var(- -var(--cor-de-fundo))
+}
+h1 {
+    background-color: white;
 }
