--- a/styles/header.css
+++ b/styles/header.css
@@ -12,9 +12,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position:relative
+    position: relative;
 }
-
 
 .container {
     display: flex;
@@ -23,11 +22,11 @@
 .container__imagem {
     padding: 1em;
 }
-.lista-menu{
-    display: none:
+.lista-menu {
+    display: none;
     position: absolute;
-    top: 100%;
+    top: 100%; 
 }
-.container_botao: :checked-. .lista-menu{
-    display:block;
+.container__botao:checked ~ .lista-menu {
+    display: block;
 }
