--- a/styles/banner.css
+++ b/styles/banner.css
@@ -21,15 +21,6 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url("../AluraBooks/Lupa.svg") no-repeat;
+    background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
-
-    .banner__pesquisa {
-      background-color: transparent;
-      border: 1px solid var(--branco);
-      color: var(--branco);
-      border-radius: 24px;
-      padding: 1em;
-      width: 100%;
-    }
   }
